--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>One Table </title>
+    <script type="text/javascript" src="/bundle.js" defer></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="text/javascript" src="/bundle.js"></script>
   </body>
 </html>
