installed css loaders and and made changes to webpack.config file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>One Table </title>
+    <link rel="stylesheet" href="./styling/App.css">
     <script type="text/javascript" src="/bundle.js" defer></script>
   </head>
   <body>
