--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,12 @@
     <meta charset="utf-8">
     <title>One Table </title>
     <link rel="stylesheet" href="./styling/App.css">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <script type="text/javascript" src="/bundle.js" defer></script>
   </head>
   <body>
     <div id="root"></div>
   </body>
 </html>
+
+
